--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "5x5"
-  , "version": "0.0.1"
-	, "private": true
-  , "dependencies": {
-      "connect": ">= 1.6.0"
-	,   "socket.io": ">= 0.7.7"
-  }
+    "name": "5x5", 
+    "version": "0.0.2",
+    "private": true,
+    "dependencies": {
+      "express": ">= 2.5.8",
+      "socket.io": ">= 0.9.2"
+    },
+    "engine": "node 0.6.10"
 }
