--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.2",
     "private": true,
     "dependencies": {
+      "coffee-script": ">= 1.2.0",
       "express": ">= 2.5.8",
       "socket.io": ">= 0.9.2"
     },
