--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "0.0.2",
     "private": true,
     "dependencies": {
-      "socket.io": ">= 0.9.2",
+      "coffee-script": ">= 1.2.0",
       "express": ">= 2.5.8",
-      "coffee-script": ">= 1.2.0"
+      "socket.io": ">= 0.9.2"
     },
     "engine": "node 0.6.10"
 }
