--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "Smaksrafl", 
-    "version": "0.0.2",
-    "private": true,
-    "dependencies": {
-      "coffee-script": ">= 1.2.0",
-      "express": ">= 2.5.8",
-      "socket.io": ">= 0.9.2"
-    },
-    "engine": "node 0.6.10"
+  "name": "Smaksrafl",
+  "version": "0.0.2",
+  "private": true,
+  "dependencies": {
+    "coffeescript": ">= 1.2.0",
+    "express": ">= 2.5.8",
+    "socket.io": ">= 0.9.2"
+  },
+  "engine": "node 0.6.10"
 }
